# KinovaArmController

./: CMakeLists.txt  README.md  package.xml
config/: arm_params.yaml
include/arm_controller/: KinovaArmController.h  KinovaArmControllerTest.h  arm_controller_node.hpp  arm_controller_test_node.hpp  trajectory_controller_node.hpp
launch/: arm_launch.py  arm_test_launch.py
log/: latest_build
src/: KinovaArmController.cpp  KinovaArmControllerTest.cpp  arm_controller_node.cpp  arm_controller_test_node.cpp  main.cpp  main_test.cpp  temp.cpp  trajectory_controller_node.cpp  trajectory_main.cpp
srv/: MoveJoints.srv
